feat: mailcow api client
